# ai-resume-builder-helper

./: .version  CMakeLists.txt  README.md
ai-resume-builder-helper/: requirements.txt
ai-resume-builder-helper/src/: __init__.py  builder.py  resume_generator.py  resume_parser.py
ai-resume-builder-helper/tests/: test_resume_builder.py
src/: ai_processor.cpp  ai_processor.h  main.cpp  resume_builder.cpp  resume_builder.h
tests/: test_ai_processor.cpp  test_resume_builder.cpp
